# vardu_spele

./: README.md  db.py  index.html  info.html  main.py  pyproject.toml  script_spele.js  spele.html  spele_v.html  style.css  top.db  tops.html
dati/: top.json  topp.db
static/: script_spele.js  script_top.js
templates/: index.html  info.html  spele_v.html  tops.html
