[tool.poetry]
name = "repl_python3_varduspele-1"
version = "0.1.0"
description = ""
authors = ["ViktorijaPizica <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
db = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
